[BLZT-86] add set injection